fix bug on menu increase z-index in header

--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -6,6 +6,7 @@ header {
   width: 100%;
   height: 8.8rem;
   border-bottom: 2px solid rgba(255, 255, 255, 0.2);
+  z-index: 1;
 
   .container {
     @include flex(row, center, space-between)
